nav not centered on mobile fix

--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@ footer a {
 
 /* Navigation Menu */
 nav {
+  max-width: 800px;
+  margin: 0 auto;
   position: fixed;
   top: 0;
   left: 0;
